<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HALO)))</string>
    <string name="tap_to_launch">Tap to launch the application</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="add">Pin</string>
    <string name="choose_app">Pin application</string>
    <string name="icon_picker_type">Select icon type:</string>
    <string name="icon_default">Default</string>
    <string name="icon_custom">Custom</string>
    <string name="unknown">Unknown</string>

    <string name="stop_to_remove">Please stop the service before removing any application from the list</string>

    <string name="ext_notes">Notes</string>
    <string name="ext_note1">Note 1</string>
    <string name="ext_note2">Note 2</string>
    <string name="ext_note3">Note 3</string>
    <string name="ext_note4">Note 4</string>
    <string name="extensions">Extensions</string>

    <string name="helper_static_2">"Using HALO)))"</string>
    <string name="helper_static_3">"Understanding HALO))) is very simple. Just tap on the Pin button in your Action Bar. Note that the button may be on the top or the bottom of your screen."</string>
    <string name="helper_static_4">"Next, Click the desired application you'd like to pin on Halo from the list."</string>
    <string name="helper_static_5">"Finally, click on the Start button and you’re done. If you want to disable HALO))), Click on the pause button."</string>
	
    <string name="nots_title">Is this ROM supported with HALO?</string>
    <string name="nots_content">"Halo))) is specially designed to work on couple of ROMs. You might not be able to experience the full potential and features of Halo."</string>
    <string name="nots_ok">"OK"</string>
    <string name="nots_download">Install</string>
    <string name="roger_that">Do not show this again</string>

    <string name="download_links">Download Links</string>
    <string name="paranoid_android">Paranoid Android</string>
    <string name="crom">C-RoM</string>
    <string name="carbon_rom">Carbon ROM</string>
    <string name="root_box">Root Box</string>
    <string name="uxylon">uXylon</string>
    <string name="saber_mod">Saber Mod</string>
    <string name="pac_man">PAC-man</string>

</resources>
